feat: Implement responsive sidebar, add proxy fetch and permissions services, and update i18n and privacy policies.

--- a/manifest.json
+++ b/manifest.json
@@ -25,9 +25,10 @@
   },
   "permissions": [
     "storage",
-    "sidePanel"
+    "sidePanel",
+    "permissions"
   ],
-  "host_permissions": [
-    "https://api.openai.com/*"
+  "optional_host_permissions": [
+    "<all_urls>"
   ]
 }
