--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,9 +7,5 @@
         "allowSyntheticDefaultImports": true,
         "strict": true
     },
-    "include": [
-        "vite.config.ts",
-        "*.config.js",
-        "*.config.ts"
-    ]
+    "include": ["vite.config.ts", "*.config.js", "*.config.ts"]
 }
