feat: add follower filter injection

--- a/manifest.json
+++ b/manifest.json
@@ -26,9 +26,11 @@
     "permissions": [
         "storage",
         "sidePanel",
-        "permissions"
+        "tabs",
+        "scripting"
     ],
     "optional_host_permissions": [
-        "<all_urls>"
+        "https://*/*",
+        "http://*/*"
     ]
 }
