--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
     "description": "AI-powered social media content creation with polishing, translation, and variant management",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
+        "dev": "npm run dev:chrome",
+        "dev:chrome": "POLYPOST_BROWSER=chrome vite",
+        "dev:firefox": "POLYPOST_BROWSER=firefox vite",
+        "dev:safari": "POLYPOST_BROWSER=safari vite",
+        "build": "npm run build:chrome",
+        "build:ext": "tsc && vite build",
+        "build:chrome": "POLYPOST_BROWSER=chrome npm run build:ext",
+        "build:firefox": "POLYPOST_BROWSER=firefox npm run build:ext",
+        "build:safari": "POLYPOST_BROWSER=safari npm run build:ext",
+        "preview": "npm run preview:chrome",
+        "preview:chrome": "POLYPOST_BROWSER=chrome vite preview",
+        "preview:firefox": "POLYPOST_BROWSER=firefox vite preview",
+        "preview:safari": "POLYPOST_BROWSER=safari vite preview",
         "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
